name:                cardano-binary
version:             1.5.0
synopsis:            Binary serialization for Cardano
description:         This package includes the binary serialization format for Cardano
license:             MIT
license-file:        LICENSE
author:              IOHK
maintainer:          operations@iohk.io
copyright:           2019 IOHK
category:            Currency
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

flag development
    description: Disable `-Werror`
    default: False
    manual: True

library
  hs-source-dirs:      src
  exposed-modules:
                       Cardano.Binary

  other-modules:
                       Cardano.Binary.Annotated
                       Cardano.Binary.Drop
                       Cardano.Binary.Limit
                       Cardano.Binary.Raw

                       Cardano.Binary.ToCBOR
                       Cardano.Binary.FromCBOR

                       Cardano.Binary.Serialize
                       Cardano.Binary.Deserialize

  build-depends:       base
                     , aeson
                     , bytestring
                     , cardano-prelude
                     , cborg
                     , containers
                     , digest
                     , formatting
                     , recursion-schemes
                     , safe-exceptions
                     , tagged
                     , text
                     , time
                     , vector

  default-language:    Haskell2010
  default-extensions:  NoImplicitPrelude

  ghc-options:         -Weverything
                       -fno-warn-all-missed-specialisations
                       -fno-warn-missing-import-lists
                       -fno-warn-safe
                       -fno-warn-unsafe

  if (!flag(development))
    ghc-options:         -Werror

test-suite test
  hs-source-dirs:      test
  main-is:             test.hs
  type:                exitcode-stdio-1.0

  other-modules:
                       Test.Cardano.Binary.SizeBounds
                       Test.Cardano.Binary.Helpers
                       Test.Cardano.Binary.Helpers.GoldenRoundTrip
                       Test.Cardano.Binary.RoundTrip
                       Test.Cardano.Binary.Serialization
                       Test.Cardano.Binary.Drop

  build-depends:       base
                     , bytestring
                     , cardano-binary
                     , cardano-prelude
                     , cardano-prelude-test
                     , cborg
                     , containers
                     , formatting
                     , hedgehog
                     , hspec
                     , pretty-show
                     , QuickCheck
                     , quickcheck-instances
                     , tagged
                     , text
                     , vector

  default-language:    Haskell2010
  default-extensions:  NoImplicitPrelude

  ghc-options:         -Weverything
                       -fno-warn-all-missed-specialisations
                       -fno-warn-missing-import-lists
                       -fno-warn-safe
                       -fno-warn-unsafe

  if (!flag(development))
    ghc-options:         -Werror

  ghc-options:         -threaded
                       -rtsopts
