name:                cardano-binary
version:             1.5.0
synopsis:            Binary serialization for Cardano
description:         This package includes the binary serialization format for Cardano
license:             Apache-2.0
license-files:        
  LICENSE
  NOTICE
author:              IOHK
maintainer:          operations@iohk.io
copyright:           2019 IOHK
category:            Currency
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

flag development
    description: Disable `-Werror`
    default: False
    manual: True

library
  hs-source-dirs:      src
  exposed-modules:
                       Cardano.Binary

  other-modules:
                       Cardano.Binary.Annotated
                       Cardano.Binary.Drop
                       Cardano.Binary.Raw

                       Cardano.Binary.ToCBOR
                       Cardano.Binary.FromCBOR

                       Cardano.Binary.Serialize
                       Cardano.Binary.Deserialize

  build-depends:       base
                     , aeson
                     , bytestring
                     , cardano-prelude
                     , cborg              >= 0.2.2 && < 0.3
                     , containers
                     , digest
                     , formatting
                     , primitive
                     , recursion-schemes
                     , safe-exceptions
                     , tagged
                     , text
                     , time
                     , vector

  default-language:    Haskell2010
  default-extensions:  NoImplicitPrelude

  ghc-options:         -Wall
                       -Wincomplete-record-updates
                       -Wincomplete-uni-patterns
                       -Wredundant-constraints
                       -Wpartial-fields
                       -Wcompat

  if (!flag(development))
    ghc-options:         -Werror

test-suite test
  hs-source-dirs:      test
  main-is:             test.hs
  type:                exitcode-stdio-1.0

  other-modules:
                       Test.Cardano.Binary.SizeBounds
                       Test.Cardano.Binary.Helpers
                       Test.Cardano.Binary.Helpers.GoldenRoundTrip
                       Test.Cardano.Binary.RoundTrip
                       Test.Cardano.Binary.Serialization
                       Test.Cardano.Binary.Drop
                       Test.Cardano.Binary.Failure

  build-depends:       base
                     , bytestring
                     , cardano-binary
                     , cardano-prelude
                     , cardano-prelude-test
                     , cborg
                     , containers
                     , formatting
                     , hedgehog
                     , hspec
                     , pretty-show
                     , QuickCheck
                     , quickcheck-instances
                     , tagged
                     , text
                     , vector

  default-language:    Haskell2010
  default-extensions:  NoImplicitPrelude

  ghc-options:         -Wall
                       -Wincomplete-record-updates
                       -Wincomplete-uni-patterns
                       -Wredundant-constraints
                       -Wpartial-fields
                       -Wcompat

  if (!flag(development))
    ghc-options:         -Werror

  ghc-options:         -threaded
                       -rtsopts
