cabal-version: 3.0
name: cardano-base
version: 0.1.0.0
synopsis: Various utilities for Cardano
description: Various utilities for Cardano.
category:
  Cardano,

copyright: 2025 Input Output Global Inc (IOG).
author: IOHK
maintainer: operations@iohk.io
license: Apache-2.0
license-files:
  LICENSE
  NOTICE

extra-doc-files:
  CHANGELOG.md
  README.md

common project-config
  default-language: Haskell2010
  build-depends: base >=4.18 && <5
  ghc-options:
    -Wall
    -Wcompat
    -Wpartial-fields
    -Wredundant-constraints
    -Wunused-packages

library
  import: project-config
  hs-source-dirs: src
  exposed-modules: Cardano.Base.FeatureFlags
  build-depends:
    aeson,
    nothunks,
