cabal-version: 3.0
name: cardano-binary
version: 1.7.1.0
synopsis: Binary serialization for Cardano
description: This package includes the binary serialization format for Cardano
license: Apache-2.0
license-files:
  LICENSE
  NOTICE

author: IOHK
maintainer: operations@iohk.io
copyright: 2019-2021 IOHK
category: Currency
build-type: Simple
extra-source-files:
  CHANGELOG.md
  README.md

common base
  build-depends: base >=4.14 && <5

common project-config
  default-language: Haskell2010
  ghc-options:
    -Wall
    -Wcompat
    -Wincomplete-record-updates
    -Wincomplete-uni-patterns
    -Wpartial-fields
    -Wredundant-constraints
    -Wunused-packages

library
  import: base, project-config
  hs-source-dirs: src
  exposed-modules: Cardano.Binary
  other-modules:
    Cardano.Binary.Deserialize
    Cardano.Binary.FromCBOR
    Cardano.Binary.Serialize
    Cardano.Binary.ToCBOR

  build-depends:
    base,
    bytestring,
    cborg >=0.2.9 && <0.3,
    containers,
    data-fix,
    formatting,
    primitive,
    recursion-schemes >=5.1 && <5.3,
    safe-exceptions,
    tagged,
    text,
    time,
    vector,

library testlib
  import: base, project-config
  visibility: public
  hs-source-dirs: testlib
  exposed-modules: Test.Cardano.Binary.TreeDiff
  build-depends:
    base,
    base16-bytestring,
    bytestring,
    cardano-binary,
    cborg,
    formatting,
    tree-diff,

test-suite test
  import: base, project-config
  hs-source-dirs: test
  main-is: test.hs
  type: exitcode-stdio-1.0
  other-modules:
    Test.Cardano.Binary.Failure
    Test.Cardano.Binary.Helpers
    Test.Cardano.Binary.Helpers.GoldenRoundTrip
    Test.Cardano.Binary.RoundTrip
    Test.Cardano.Binary.Serialization
    Test.Cardano.Binary.SizeBounds

  build-depends:
    QuickCheck,
    base,
    bytestring,
    cardano-binary,
    cardano-prelude-test,
    cborg,
    containers,
    formatting,
    hedgehog,
    hspec,
    pretty-show,
    quickcheck-instances,
    tagged,
    text,
    time,
    vector,

  ghc-options:
    -threaded
    -rtsopts
