cabal-version: 3.0
name: cardano-binary
version: 1.8.0.0
synopsis: Binary serialization for Cardano
description: This package includes the binary serialization format for Cardano
license: Apache-2.0
license-files:
  LICENSE
  NOTICE

author: IOHK
maintainer: operations@iohk.io
copyright: 2019-2021 IOHK
category: Currency
build-type: Simple
extra-doc-files:
  CHANGELOG.md
  README.md

common base
  build-depends: base >=4.18 && <5

common project-config
  default-language: Haskell2010
  ghc-options:
    -Wall
    -Wcompat
    -Wincomplete-record-updates
    -Wincomplete-uni-patterns
    -Wpartial-fields
    -Wunused-packages

  -- ghc-9.14 gives redundant constraint warnings on some constraints
  -- that are needed for earlier compilers.
  if impl(ghc <9.14)
    ghc-options:
      -Wredundant-constraints

library
  import: base, project-config
  hs-source-dirs: src
  exposed-modules: Cardano.Binary
  other-modules:
    Cardano.Binary.Deserialize
    Cardano.Binary.FromCBOR
    Cardano.Binary.Serialize
    Cardano.Binary.ToCBOR

  build-depends:
    base,
    bytestring,
    cardano-base,
    cborg >=0.2.9 && <0.3,
    containers,
    data-fix,
    formatting,
    primitive,
    recursion-schemes >=5.1 && <5.3,
    safe-exceptions,
    tagged,
    text,
    time,
    vector,

library testlib
  import: base, project-config
  visibility: public
  hs-source-dirs: testlib
  exposed-modules:
    Test.Cardano.Binary.Arbitrary
    Test.Cardano.Binary.Helpers
    Test.Cardano.Binary.Helpers.GoldenRoundTrip
    Test.Cardano.Binary.TreeDiff

  build-depends:
    QuickCheck,
    base,
    base16-bytestring,
    bytestring,
    cardano-base:testlib,
    cardano-binary,
    cardano-prelude-test,
    cborg,
    containers,
    formatting,
    half,
    hedgehog,
    hspec,
    pretty-show,
    quickcheck-instances,
    text,
    tree-diff,

test-suite tests
  import: base, project-config
  hs-source-dirs: test
  main-is: test.hs
  type: exitcode-stdio-1.0
  other-modules:
    Test.Cardano.Binary.Failure
    Test.Cardano.Binary.RoundTrip
    Test.Cardano.Binary.Serialization
    Test.Cardano.Binary.SizeBounds

  build-depends:
    base,
    bytestring,
    cardano-binary:{cardano-binary, testlib},
    cardano-prelude-test,
    cborg,
    containers,
    hedgehog,
    tagged,
    text,
    time,
    vector,

  ghc-options:
    -threaded
    -rtsopts
