name:                cardano-crypto-class
version:             2.0.0
synopsis:            Type classes abstracting over cryptography primitives for Cardano
description:         Type classes abstracting over cryptography primitives for Cardano
license:             Apache-2.0
license-files:
  LICENSE
  NOTICE
author:              IOHK
maintainer:          operations@iohk.io
copyright:           2019 IOHK
category:            Currency
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

flag development
    description: Disable `-Werror`
    default: False
    manual: True

library
  hs-source-dirs:      src
  exposed-modules:
                       Cardano.Crypto.DSIGN
                       Cardano.Crypto.Hash
                       Cardano.Crypto.KES
                       Cardano.Crypto.VRF

                       Cardano.Crypto.DSIGN.Class
                       Cardano.Crypto.DSIGN.Ed25519
                       Cardano.Crypto.DSIGN.Ed448
                       Cardano.Crypto.DSIGN.Mock
                       Cardano.Crypto.DSIGN.NeverUsed

                       Cardano.Crypto.Hash.Blake2b
                       Cardano.Crypto.Hash.Class
                       Cardano.Crypto.Hash.MD5
                       Cardano.Crypto.Hash.NeverUsed
                       Cardano.Crypto.Hash.SHA256
                       Cardano.Crypto.Hash.SHA3_256
                       Cardano.Crypto.Hash.Short

                       Cardano.Crypto.KES.Class
                       Cardano.Crypto.KES.Mock
                       Cardano.Crypto.KES.NeverUsed
                       Cardano.Crypto.KES.Simple
                       Cardano.Crypto.KES.Single
                       Cardano.Crypto.KES.Sum

                       Cardano.Crypto.Seed
                       Cardano.Crypto.Util

                       Cardano.Crypto.VRF.Class
                       Cardano.Crypto.VRF.Mock
                       Cardano.Crypto.VRF.NeverUsed
                       Cardano.Crypto.VRF.Simple

                       Cardano.Crypto.Libsodium

  build-depends:       aeson
                     , base
                     , base16-bytestring
                     , bytestring
                     , cardano-binary
                     , cardano-prelude
                     , cryptonite
                     , deepseq
                     , integer-gmp
                     , memory
                     , text
                     , transformers
                     , vector

  default-language:    Haskell2010

  ghc-options:         -Wall
                       -Wincomplete-record-updates
                       -Wincomplete-uni-patterns
                       -Wredundant-constraints
                       -Wpartial-fields
                       -Wcompat
  if impl(ghc >=8.8)
    ghc-options:       -fno-warn-missing-deriving-strategies
  if impl(ghc >=8.10)
    ghc-options:       -fno-warn-missing-safe-haskell-mode
                       -fno-warn-prepositive-qualified-module
                       -fno-warn-unused-packages
  pkgconfig-depends:   libsodium

  if (!flag(development))
    ghc-options:         -Werror

test-suite test-memory-example
  type:                exitcode-stdio-1.0
  hs-source-dirs:      memory-example
  main-is:             Main.hs

  build-depends:       base
                     , cardano-crypto-class

  if os(linux) || os(osx)
    build-depends:     unix

  default-language:    Haskell2010

  ghc-options:         -Wall
                       -Wincomplete-record-updates
                       -Wincomplete-uni-patterns
                       -Wredundant-constraints
                       -Wpartial-fields
                       -Wcompat
  if impl(ghc >=8.8)
    ghc-options:       -fno-warn-missing-deriving-strategies
  if impl(ghc >=8.10)
    ghc-options:       -fno-warn-missing-safe-haskell-mode
                       -fno-warn-prepositive-qualified-module
                       -fno-warn-unused-packages
  if (!flag(development))
    ghc-options:         -Werror
