cabal-version: 3.0
name: cardano-crypto-class
version: 2.3.0.0
synopsis:
  Type classes abstracting over cryptography primitives for Cardano

description:
  Type classes abstracting over cryptography primitives for Cardano

license: Apache-2.0
license-files:
  LICENSE
  NOTICE

author: IOHK
maintainer: operations@iohk.io
copyright: 2019-2021 IOHK
category: Currency
build-type: Simple
extra-doc-files:
  CHANGELOG.md
  README.md

extra-source-files:
  cbits/blst_util.h

data-files:
  bls12-381-test-vectors/test_vectors/bls_sig_aug_test_vectors
  bls12-381-test-vectors/test_vectors/ec_operations_test_vectors
  bls12-381-test-vectors/test_vectors/h2c_large_dst
  bls12-381-test-vectors/test_vectors/pairing_test_vectors
  bls12-381-test-vectors/test_vectors/serde_test_vectors

flag secp256k1-support
  description:
    Enable support for functions from libsecp256k1. Requires
    a recent libsecp256k1 with support for Schnorr signatures.

  default: True
  manual: True

common base
  build-depends: base >=4.18 && <5

common project-config
  default-language: Haskell2010
  ghc-options:
    -Wall
    -Wcompat
    -Wincomplete-record-updates
    -Wincomplete-uni-patterns
    -Wpartial-fields
    -Wunused-packages

  -- ghc-9.14 gives redundant constraint warnings on some constraints
  -- that are needed for earlier compilers.
  if impl(ghc <9.14)
    ghc-options:
      -Wredundant-constraints

library
  import: base, project-config
  hs-source-dirs: src
  exposed-modules:
    Cardano.Crypto.DSIGN
    Cardano.Crypto.DSIGN.BLS12381
    Cardano.Crypto.DSIGN.Class
    Cardano.Crypto.DSIGN.Ed25519
    Cardano.Crypto.DSIGN.Ed448
    Cardano.Crypto.DSIGN.Mock
    Cardano.Crypto.DSIGN.NeverUsed
    Cardano.Crypto.DirectSerialise
    Cardano.Crypto.EllipticCurve.BLS12_381
    Cardano.Crypto.EllipticCurve.BLS12_381.Internal
    Cardano.Crypto.Hash
    Cardano.Crypto.Hash.Blake2b
    Cardano.Crypto.Hash.Class
    Cardano.Crypto.Hash.Keccak256
    Cardano.Crypto.Hash.NeverUsed
    Cardano.Crypto.Hash.RIPEMD160
    Cardano.Crypto.Hash.SHA256
    Cardano.Crypto.Hash.SHA3_256
    Cardano.Crypto.Hash.SHA3_512
    Cardano.Crypto.Hash.SHA512
    Cardano.Crypto.Hash.Short
    Cardano.Crypto.Init
    Cardano.Crypto.KES
    Cardano.Crypto.KES.Class
    Cardano.Crypto.KES.CompactSingle
    Cardano.Crypto.KES.CompactSum
    Cardano.Crypto.KES.Mock
    Cardano.Crypto.KES.NeverUsed
    Cardano.Crypto.KES.Simple
    Cardano.Crypto.KES.Single
    Cardano.Crypto.KES.Sum
    Cardano.Crypto.Libsodium
    Cardano.Crypto.Libsodium.C
    Cardano.Crypto.Libsodium.Constants
    Cardano.Crypto.Libsodium.Hash
    Cardano.Crypto.Libsodium.Hash.Class
    Cardano.Crypto.Libsodium.Init
    Cardano.Crypto.Libsodium.MLockedBytes
    Cardano.Crypto.Libsodium.MLockedBytes.Internal
    Cardano.Crypto.Libsodium.MLockedSeed
    Cardano.Crypto.Libsodium.Memory
    Cardano.Crypto.Libsodium.Memory.Internal
    Cardano.Crypto.Libsodium.UnsafeC
    Cardano.Crypto.PackedBytes
    Cardano.Crypto.PinnedSizedBytes
    Cardano.Crypto.Seed
    Cardano.Crypto.Util
    Cardano.Crypto.VRF
    Cardano.Crypto.VRF.Class
    Cardano.Crypto.VRF.Mock
    Cardano.Crypto.VRF.NeverUsed
    Cardano.Crypto.VRF.Simple
    Cardano.Foreign

  other-modules:
    Cardano.Crypto.PackedBytes.Internal

  build-depends:
    FailT,
    aeson,
    base16-bytestring >=1,
    bytestring,
    cardano-binary >=1.7.3,
    cardano-strict-containers,
    cborg,
    crypton,
    deepseq,
    heapwords,
    io-classes >=1.4.1,
    memory,
    memory-pool,
    mempack,
    mtl,
    nothunks,
    primitive >=0.8,
    template-haskell,
    text,
    th-compat,
    transformers,
    vector,

  if impl(ghc <9.0.0)
    build-depends:
      integer-gmp
  pkgconfig-depends:
    libblst >=0.3.14,
    libsodium,

  c-sources: cbits/blst_util.c
  include-dirs: cbits

  if flag(secp256k1-support)
    exposed-modules:
      Cardano.Crypto.DSIGN.EcdsaSecp256k1
      Cardano.Crypto.DSIGN.SchnorrSecp256k1
      Cardano.Crypto.SECP256K1.C
      Cardano.Crypto.SECP256K1.Constants

    pkgconfig-depends: libsecp256k1
    cpp-options: -DSECP256K1_ENABLED

library testlib
  import: base, project-config
  hs-source-dirs: testlib
  visibility: public
  exposed-modules:
    Test.Crypto.AllocLog
    Test.Crypto.DSIGN
    Test.Crypto.EllipticCurve
    Test.Crypto.EqST
    Test.Crypto.Hash
    Test.Crypto.Instances
    Test.Crypto.KES
    Test.Crypto.Regressions
    Test.Crypto.RunIO
    Test.Crypto.Util
    Test.Crypto.Vector.SerializationUtils

  other-modules: Paths_cardano_crypto_class
  autogen-modules: Paths_cardano_crypto_class
  build-depends:
    HUnit,
    QuickCheck,
    base,
    base16-bytestring,
    bytestring >=0.10.12.0,
    cardano-binary,
    cardano-crypto-class,
    cborg,
    containers,
    contra-tracer ==0.1.0.1 || ==0.1.0.2,
    crypton,
    formatting,
    hspec,
    io-classes >=1.4.0,
    mempack,
    mtl,
    nothunks,
    pretty-show,
    quickcheck-instances,
    vector,

  if flag(secp256k1-support)
    cpp-options: -DSECP256K1_ENABLED
    exposed-modules:
      Test.Crypto.Vector.Secp256k1DSIGN
      Test.Crypto.Vector.StringConstants
      Test.Crypto.Vector.Vectors

library benchlib
  import: base, project-config
  hs-source-dirs: benchlib
  visibility: public
  exposed-modules: Bench.Crypto.BenchData
  build-depends:
    base,
    bytestring,
    cardano-crypto-class,

test-suite tests
  import: base, project-config
  type: exitcode-stdio-1.0
  hs-source-dirs: test
  other-modules: Paths_cardano_crypto_class
  autogen-modules: Paths_cardano_crypto_class
  main-is: Main.hs
  build-depends:
    base,
    cardano-crypto-class:{cardano-crypto-class, testlib},
    hspec,

  if flag(secp256k1-support)
    cpp-options: -DSECP256K1_ENABLED
  ghc-options:
    -threaded
    -rtsopts
    -with-rtsopts=-N

benchmark bench
  import: base, project-config
  type: exitcode-stdio-1.0
  hs-source-dirs: bench
  main-is: Main.hs
  other-modules:
    Bench.Crypto.DSIGN
    Bench.Crypto.HASH
    Bench.Crypto.KES

  build-depends:
    base,
    bytestring,
    cardano-binary,
    cardano-crypto-class:{cardano-crypto-class, benchlib},
    criterion,
    deepseq,

  if flag(secp256k1-support)
    cpp-options: -DSECP256K1_ENABLED
  ghc-options: -threaded

test-suite test-memory-example
  import: base, project-config
  -- Temporarily removing this as it is breaking the CI, and
  -- we don't see the benefit. Will circle back to this to decide
  -- whether to modify or completely remove.
  buildable: False
  type: exitcode-stdio-1.0
  hs-source-dirs: memory-example
  main-is: Main.hs
  build-depends:
    base,
    bytestring,
    cardano-crypto-class,

  if (os(linux) || os(osx))
    build-depends: unix
