cabal-version: 3.0
name: cardano-crypto-leios
version: 0.1.0.0
synopsis: Crypto primitives for Leios
description:
  Data types for the Leios cryptographic artifacts as specified in CIP-0164.

license: Apache-2.0
license-files: LICENSE
author: IOHK
maintainer: operations@iohk.io
copyright: 2026 Input Output Global, Inc.
category: Currency
build-type: Simple
extra-doc-files:
  CHANGELOG.md
  README.md

common base
  build-depends: base >=4.18 && <5

common project-config
  default-language: Haskell2010
  ghc-options:
    -Wall
    -Wcompat
    -Wincomplete-record-updates
    -Wincomplete-uni-patterns
    -Wpartial-fields
    -Wredundant-constraints
    -Wunused-packages

library
  import: base, project-config
  hs-source-dirs: src
  exposed-modules:
    Cardano.Crypto.Leios

  build-depends:
    bytestring,
    cardano-base >= 0.1.6.0,
    cardano-binary,
    cardano-crypto-class,
    cborg,
    containers,
    deepseq,
    nothunks,
    primitive >=0.7.3,
    text,
    vector,

library testlib
  import: base, project-config
  visibility: public
  hs-source-dirs: testlib
  exposed-modules:
    Test.Cardano.Crypto.Leios.Gen

  build-depends:
    QuickCheck,
    cardano-base:testlib,
    cardano-crypto-class,
    cardano-crypto-leios,
    containers,
    vector,

test-suite tests
  import: base, project-config
  type: exitcode-stdio-1.0
  hs-source-dirs: test
  main-is: Main.hs
  other-modules:
    Test.Cardano.Crypto.Leios

  build-depends:
    QuickCheck,
    base16-bytestring,
    bytestring,
    cardano-base:testlib,
    cardano-binary,
    cardano-crypto-class,
    cardano-crypto-leios:{cardano-crypto-leios, testlib},
    cborg,
    containers,
    hspec,
    hspec-golden,
    vector,

  ghc-options:
    -threaded
    -rtsopts
