cabal-version: 2.2
name: cardano-crypto-peras
version: 0.1.0.0
synopsis: Crypto primitives for Peras
description:
license: Apache-2.0
license-files:
  LICENSE
  NOTICE

author: IOHK
maintainer: operations@iohk.io
copyright: 2025 IOHK
category: Currency
build-type: Simple
extra-source-files:
  CHANGELOG.md
  README.md

common base
  build-depends: base >=4.18 && <5

common project-config
  default-language: Haskell2010
  ghc-options:
    -Wall
    -Wcompat
    -Wincomplete-record-updates
    -Wincomplete-uni-patterns
    -Wpartial-fields
    -Wredundant-constraints
    -Wunused-packages

library
  import: base, project-config
  hs-source-dirs: src
  exposed-modules:
    Cardano.Crypto.Peras
    Cardano.Crypto.Peras.Cert

  build-depends:
    base,
    nothunks,
    quiet,
